changed gbkcache directory

--- a/local.conf
+++ b/local.conf
@@ -4,7 +4,7 @@
 # Downloaded genbank files are cached here.
 # ripper_run.sh automatically generates a gbkcache
 # directory in the directory it is run from.
-gbkcache            gbkcache
+gbkcache            home/mnt/gbkcache
 
 # Filename for the SQLite3 database.
 # ripper_run.sh automatically generates a sqlite
